Feature/w 18739888 add integration to support groq and nvidia (#164)
* Add integration and config for groq

* Update munits for groq text operations

* Update munits for nvidia text operations

* Update tooling test for nvidia models